fix bug where there was typo in dietary restrictions, add data.sql